--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ nav h1 {
 .board {
   width: 450px;
   height: 550px;
-  border: 1px solid black;
+  border: 1px solid rgb(160, 131, 131);
   display: flex;
   flex-direction: column;
 }
