--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@ nav h1 {
 .board {
   width: 450px;
   height: 550px;
-  border: 1px solid rgb(160, 131, 131);
   display: flex;
   flex-direction: column;
 }
@@ -79,4 +78,22 @@ nav h1 {
   flex-direction: row;
   justify-content: center;
   margin: 5px;
+}
+
+.key {
+  width: 50px;
+  height: 70px;
+  margin: 5px;
+  border-radius: 4px;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
+  background-color: grey;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+
+#big {
+  width: 100px;
 }
