--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@ body {
   margin: 0;
 }
 
+.game {
+  width: 100vw;
+  height: calc(100vh - 170px);
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  flex-direction: column;
+}
+
 nav {
   height: 60px;
   width: 100%;
