--- a/src/index.css
+++ b/src/index.css
@@ -103,28 +103,25 @@ nav h1 {
   cursor: pointer;
 }
 
-#big {
+/* ... */
+
+.key.big {
   width: 100px;
 }
 
-#correct {
+.letter.correct {
   background-color: #528d4e;
 }
 
-#almost {
+.letter.almost {
   background-color: #b49f39;
 }
 
-#error {
+.letter.error {
   background-color: #3a393c;
 }
 
-#disabled {
-  /* background-color: #3a393c; */
-  background-color: #5d31b4;
+.key.disabled {
+  background-color: #3a393c;
 }
 
-.disabled {
-  /* background-color: #3a393c; */
-  background-color: #5d31b4;
-}
