--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,41 @@
 body {
   text-align: center;
   background-color: #121212;
-  width: 100vw;
-  height: 100vh;
   color: white;
   padding: 0%;
   margin: 0;
 }
 
 .game {
-  width: 100vw;
-  height: calc(100vh - 170px);
   display: flex;
   align-items: center;
-  padding-top: 50px;
   flex-direction: column;
 }
 
 nav {
   height: 60px;
-  width: 100%;
-  margin: 0;
   border-bottom: 1px solid grey;
   display: grid;
   place-items: center;
+  margin: 1rem;
 }
 
 nav h1 {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
   color: white;
-  font-size: 45px;
+  font-size: 3rem;
 }
 
 .board {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 550px;
   display: flex;
   flex-direction: column;
 }
 
 .row {
-  flex: 33%;
   display: flex;
   flex-direction: row;
   margin: 5px;
@@ -49,7 +43,7 @@ nav h1 {
 
 .letter {
   flex: 33%;
-  height: 100%;
+  height: 80px; /* change the height value to your desired size */
   border: 1px solid grey;
   margin: 5px;
   display: grid;
@@ -58,12 +52,14 @@ nav h1 {
   font-weight: bolder;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  aspect-ratio: 1 / 1; /* this property ensures the square shape */
 }
 
 .keyboard {
-  width: 700px;
+  width: 100%;
+  max-width: 480px;
   height: 300px;
-  margin-top: 60px;
+  margin-top: 80px;
 }
 
 .line1 {
@@ -90,13 +86,13 @@ nav h1 {
 }
 
 .key {
-  width: 50px;
-  height: 70px;
+  width: 40px;
+  height: 60px;
   margin: 5px;
   border-radius: 4px;
   display: grid;
   place-items: center;
-  font-size: 20px;
+  font-size: 16px;
   background-color: grey;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -104,7 +100,8 @@ nav h1 {
 }
 
 .key.big {
-  width: 100px;
+  width: 80px;
+  font-size: 18px;
 }
 
 .letter.correct {
@@ -134,4 +131,63 @@ nav h1 {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  nav h1 {
+    font-size: 2rem;
+  }
+
+  .letter {
+    font-size: 3rem;
+    height: 60px;
+    margin: 3px;
+  }
+
+  .keyboard {
+    margin-top: 60px;
+  }
+
+  .board {
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  nav h1 {
+    font-size: 1.5rem;
+  }
+
+  .letter {
+    font-size: 2rem;
+    height: 60px;
+    margin: 2px;
+  }
+
+  .keyboard {
+    margin-top: 100px;
+  }
+
+  .key {
+    width: 28px;
+    height: 40px;
+    margin: 5px;
+    border-radius: 4px;
+    display: grid;
+    place-items: center;
+    font-size: 16px;
+    background-color: grey;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+  }
+
+  .key.big {
+    width: 50px;
+    font-size: 10px;
+  }
+
+  .board {
+    height: 350px;
+  }
 }
